Minor bugfix of sidebar's overflow due to always being more than 100vh

--- a/style.css
+++ b/style.css
@@ -11,10 +11,11 @@ body {
 #sidebar {
     grid-column: 1 / 2;
     overflow-y: auto;
+    height: 100vh;
 }
 
 #weeks {
-    min-height: 100vh;
+
     padding: 3rem 2rem;
 
 }
